--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T17:38:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,11 +388,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qmo2Lzg+eWF7
-								I0O4WnBG2w==
+								Z4AJXSBVeqzb
+								aVL95hoxIw==
 								</data>
 								<key>Size</key>
-								<integer>72432</integer>
+								<integer>72433</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -658,11 +658,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VFZVIERfUHNZ
-								q1cvrTGuvg==
+								yo7OJ5nHtlIO
+								1HgKlInNwg==
 								</data>
 								<key>Size</key>
-								<integer>145572</integer>
+								<integer>145790</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
@@ -2905,7 +2905,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T14:09:28Z</date>
+						<date>2018-07-10T17:38:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2954,121 +2954,121 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qAh+qbptlqDh
-								13HUcV/6Og==
+								9aG8gi8hGPTM
+								nB1cDOh5dg==
 								</data>
 								<key>Size</key>
-								<integer>103135</integer>
+								<integer>103123</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Er/+pE7hNNIn
-								W7FQzXekEQ==
+								Y4lgVTf8Gkkk
+								8EHuVP0Cmw==
 								</data>
 								<key>Size</key>
-								<integer>94699</integer>
+								<integer>94687</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5xACEUvkvEwz
-								VJnG6F3YxQ==
+								L89c/ljUrVh4
+								r2rgzOjFhw==
 								</data>
 								<key>Size</key>
-								<integer>337058</integer>
+								<integer>337046</integer>
 							</dict>
 							<key>files/stacks-image-1b7cfd7-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6850vL6xR3zu
-								I585rDTQ9A==
+								V3IbWWl3JOsc
+								xD+1ev9Ukg==
 								</data>
 								<key>Size</key>
-								<integer>83796</integer>
+								<integer>83784</integer>
 							</dict>
 							<key>files/stacks-image-1cd049f-250x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jDouJEb5UOgP
-								r0dDWJlwxQ==
+								KYjWU4n4Fd2k
+								AoJaQWoioQ==
 								</data>
 								<key>Size</key>
-								<integer>105930</integer>
+								<integer>105918</integer>
 							</dict>
 							<key>files/stacks-image-4935364-261x251.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pUhB5Fqnu3YS
-								YA9dT+6AqA==
+								h86nWD8isiw4
+								5W/HSehlMw==
 								</data>
 								<key>Size</key>
-								<integer>126611</integer>
+								<integer>126599</integer>
 							</dict>
 							<key>files/stacks-image-4935364-261x251@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								qhWr5oOEZqif
-								DGH4sagTCw==
+								5MNxG52rxo47
+								fAl1teNWPQ==
 								</data>
 								<key>Size</key>
-								<integer>462108</integer>
+								<integer>462096</integer>
 							</dict>
 							<key>files/stacks-image-8364b1f-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								54Pi3j6G6/2E
-								lZMvrz7LCQ==
+								VTNuN612V1GJ
+								qoz67hsz/w==
 								</data>
 								<key>Size</key>
-								<integer>82434</integer>
+								<integer>82422</integer>
 							</dict>
 							<key>files/stacks-image-8364b1f-250x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jkc9i4T4u9l6
-								TAQpPAe0oA==
+								Gx8aA3FxM3FU
+								IW8ctwO33w==
 								</data>
 								<key>Size</key>
-								<integer>279051</integer>
+								<integer>279039</integer>
 							</dict>
 							<key>files/stacks-image-8387376-251x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uLnjrAb6/rb2
-								PvK474baVg==
+								StqOH6zEEUdP
+								VL/bvqqV8Q==
 								</data>
 								<key>Size</key>
-								<integer>93134</integer>
+								<integer>93122</integer>
 							</dict>
 							<key>files/stacks-image-8387376-251x250@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3ZabeVPvd9Kl
-								twBcUWNgPQ==
+								pD8TK0t2dUel
+								KlBmsLmHBw==
 								</data>
 								<key>Size</key>
-								<integer>331007</integer>
+								<integer>330995</integer>
 							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SdC49IhJ3JHE
-								zutzsmftPQ==
+								puf8IgV3ZVSP
+								HN7YynCLTg==
 								</data>
 								<key>Size</key>
-								<integer>12547</integer>
+								<integer>12535</integer>
 							</dict>
 							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
 							<dict>
@@ -3084,51 +3084,51 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X4LIM0pJmROb
-								OoK7OiXgTw==
+								wFkMRy2/WKvo
+								H9dKvYDhIw==
 								</data>
 								<key>Size</key>
-								<integer>103555</integer>
+								<integer>103543</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x256.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JQq/tMG5yWnX
-								mrXC2R4Oig==
+								ZzwnqfzXdsdD
+								1OMOi3dEmw==
 								</data>
 								<key>Size</key>
-								<integer>101345</integer>
+								<integer>101333</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x256@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								BBFEAKWPfxhN
-								YCQVK2+Czg==
+								SnK7vvGKXBKF
+								8ikV9exfsA==
 								</data>
 								<key>Size</key>
-								<integer>353790</integer>
+								<integer>353778</integer>
 							</dict>
 							<key>files/stacks-image-c9f8f3e-300x168.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tPrKTkeRLB3f
-								sDvisoqn9A==
+								F3PQkz9HIAuZ
+								nYpHa8bgcg==
 								</data>
 								<key>Size</key>
-								<integer>36650</integer>
+								<integer>36638</integer>
 							</dict>
 							<key>files/stacks-image-fedaa0e-261x251.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Qx3usBTZaMMY
-								7hat0ECS2w==
+								ri/OBDs3i2iv
+								O7tScwBwlw==
 								</data>
 								<key>Size</key>
-								<integer>106102</integer>
+								<integer>106090</integer>
 							</dict>
 							<key>files/stacks_page_page35.css</key>
 							<dict>
@@ -3154,11 +3154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2a+Uxqteo/fz
-								r+P3ZoiRww==
+								qc8qtihtvf4M
+								LMyha/wcNw==
 								</data>
 								<key>Size</key>
-								<integer>62146</integer>
+								<integer>62149</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7233,7 +7233,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T15:33:53Z</date>
+						<date>2018-07-10T17:38:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8272,11 +8272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								g0U7vFpNhv9+
+								FnAoyWykOA==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8289,31 +8289,11 @@
 					<key>rw:theme:foundation - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T21:13:50Z</date>
+						<date>2018-07-10T17:38:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>consolidated-34.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								3SOyZPpYMqx2
-								34c6HgdeQQ==
-								</data>
-								<key>Size</key>
-								<integer>242066</integer>
-							</dict>
-							<key>consolidated-43.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								3SOyZPpYMqx2
-								34c6HgdeQQ==
-								</data>
-								<key>Size</key>
-								<integer>242066</integer>
-							</dict>
 							<key>consolidated.css</key>
 							<dict>
 								<key>Digest</key>
@@ -8328,31 +8308,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9qY8i5WIVn+H
-								k8+txYIDeg==
+								XcqkOC8KZUQK
+								SE6q49HVdg==
 								</data>
 								<key>Size</key>
-								<integer>134944</integer>
+								<integer>134945</integer>
 							</dict>
 							<key>ie8.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fQWPYERb4jlS
-								JRd45q9xBA==
+								xx7UIVUPpRSq
+								2Y6LRTuybw==
 								</data>
 								<key>Size</key>
-								<integer>27444</integer>
+								<integer>27445</integer>
 							</dict>
 							<key>ie8rem.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								DHhzOLR4+np4
-								mmq+1xouYA==
+								mNmqAGa5+9hM
+								kRw2O7uA8g==
 								</data>
 								<key>Size</key>
-								<integer>2545</integer>
+								<integer>2546</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12288,7 +12268,7 @@
 					<key>UniqueBackupName</key>
 					<string>986C317C-4106-4888-8861-F3B56F718A72_rwbackup</string>
 					<key>UserAgentResizingPreset</key>
-					<integer>3</integer>
+					<integer>0</integer>
 					<key>WantsXMLSiteMap</key>
 					<true/>
 					<key>WebClipIcon</key>
