--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T17:38:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qmo2Lzg+eWF7
-								I0O4WnBG2w==
+								Z4AJXSBVeqzb
+								aVL95hoxIw==
 								</data>
 								<key>Size</key>
-								<integer>72432</integer>
+								<integer>72433</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VFZVIERfUHNZ
-								q1cvrTGuvg==
+								yo7OJ5nHtlIO
+								1HgKlInNwg==
 								</data>
 								<key>Size</key>
-								<integer>145572</integer>
+								<integer>145790</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
