--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T17:38:54Z</date>
+						<date>2018-07-10T17:49:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,8 +388,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z4AJXSBVeqzb
-								aVL95hoxIw==
+								jcaKSVy5yWgZ
+								QipI6PU0dQ==
 								</data>
 								<key>Size</key>
 								<integer>72433</integer>
@@ -7233,7 +7233,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T17:38:54Z</date>
+						<date>2018-07-10T17:49:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8272,11 +8272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g0U7vFpNhv9+
-								FnAoyWykOA==
+								KqR1KWiKbOYX
+								WSPOrizpDw==
 								</data>
 								<key>Size</key>
-								<integer>3364</integer>
+								<integer>3327</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
