--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T17:38:54Z</date>
+						<date>2018-07-10T17:49:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,8 +44,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z4AJXSBVeqzb
-								aVL95hoxIw==
+								jcaKSVy5yWgZ
+								QipI6PU0dQ==
 								</data>
 								<key>Size</key>
 								<integer>72433</integer>
