--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T17:58:12Z</date>
+						<date>2018-07-10T18:10:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z4AJXSBVeqzb
-								aVL95hoxIw==
+								AVTlks1KiiSz
+								oqylXbHkIQ==
 								</data>
 								<key>Size</key>
-								<integer>72433</integer>
+								<integer>71861</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yo7OJ5nHtlIO
-								1HgKlInNwg==
+								5Ax3OV1O8+T7
+								57cB7qWEWA==
 								</data>
 								<key>Size</key>
-								<integer>145790</integer>
+								<integer>144628</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
