Logo, page title, and info boxes

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:10:18Z</date>
+						<date>2018-07-10T18:24:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,11 +388,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AVTlks1KiiSz
-								oqylXbHkIQ==
+								1b6I8oYgYbX2
+								0xOGGxvl3g==
 								</data>
 								<key>Size</key>
-								<integer>71861</integer>
+								<integer>70695</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -658,11 +658,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5Ax3OV1O8+T7
-								57cB7qWEWA==
+								TeFy8/zc61i1
+								o46ft1gtDw==
 								</data>
 								<key>Size</key>
-								<integer>144628</integer>
+								<integer>142291</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
