Home page info boxes

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -23,7 +23,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								goYWZQidh8bv
-								hlKYiOQy/g==
+								lVED/q+f32tu
+								SQg3N+s9OQ==
 								</data>
 								<key>Size</key>
-								<integer>218498</integer>
+								<integer>218577</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								szimsqceIHXZ
-								fbstCn9iFQ==
+								9nEOrEIyiKmT
+								J+Ak3U/TGA==
 								</data>
 								<key>Size</key>
-								<integer>148551</integer>
+								<integer>148576</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:24:58Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,11 +388,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1b6I8oYgYbX2
-								0xOGGxvl3g==
+								5RSIYlYQXc2d
+								uD4gltt3zw==
 								</data>
 								<key>Size</key>
-								<integer>70695</integer>
+								<integer>70533</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -658,11 +658,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TeFy8/zc61i1
-								o46ft1gtDw==
+								KOXcfM966p/p
+								FLYp2UyNfw==
 								</data>
 								<key>Size</key>
-								<integer>142291</integer>
+								<integer>141945</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
@@ -3669,7 +3669,7 @@
 					<key>page41 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3748,11 +3748,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBsOvPWXmkh6
-								zRXNKmy71w==
+								8ue45TGC5qGE
+								0tXd1bV/lA==
 								</data>
 								<key>Size</key>
-								<integer>99115</integer>
+								<integer>99520</integer>
 							</dict>
 							<key>files/stacks_page_page41.js</key>
 							<dict>
@@ -3768,11 +3768,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QCQd/s7RXj0z
-								6GiKrLatFg==
+								AjOtlrhObFjz
+								gvhq63K8Xg==
 								</data>
 								<key>Size</key>
-								<integer>40269</integer>
+								<integer>40394</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4485,7 +4485,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-05T15:35:10Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4714,11 +4714,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3ysFdvJyIarf
-								Bo1H+4wQRQ==
+								H0GAi/aNRNCR
+								R7bS9qtOwQ==
 								</data>
 								<key>Size</key>
-								<integer>163264</integer>
+								<integer>163912</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -4734,11 +4734,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6xZGx5sYgPoX
-								Sknks1OoOQ==
+								2HLh345BlYgn
+								HY/dLH3OJQ==
 								</data>
 								<key>Size</key>
-								<integer>90564</integer>
+								<integer>90764</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6669,7 +6669,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T15:33:53Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6918,11 +6918,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EQRmJJ7i96Fo
-								iTEWszzyeA==
+								zrUmYcGUM+Xi
+								1BAhjh132Q==
 								</data>
 								<key>Size</key>
-								<integer>207114</integer>
+								<integer>207193</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -6938,11 +6938,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3RqLY/HMFnZi
-								kBccZkD/Ng==
+								eJfggyLIFSLd
+								XrbiQpY7pw==
 								</data>
 								<key>Size</key>
-								<integer>120905</integer>
+								<integer>120930</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
