--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-05T15:35:10Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3ysFdvJyIarf
-								Bo1H+4wQRQ==
+								H0GAi/aNRNCR
+								R7bS9qtOwQ==
 								</data>
 								<key>Size</key>
-								<integer>163264</integer>
+								<integer>163912</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6xZGx5sYgPoX
-								Sknks1OoOQ==
+								2HLh345BlYgn
+								HY/dLH3OJQ==
 								</data>
 								<key>Size</key>
-								<integer>90564</integer>
+								<integer>90764</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
