--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T15:33:53Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EQRmJJ7i96Fo
-								iTEWszzyeA==
+								zrUmYcGUM+Xi
+								1BAhjh132Q==
 								</data>
 								<key>Size</key>
-								<integer>207114</integer>
+								<integer>207193</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -302,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3RqLY/HMFnZi
-								kBccZkD/Ng==
+								eJfggyLIFSLd
+								XrbiQpY7pw==
 								</data>
 								<key>Size</key>
-								<integer>120905</integer>
+								<integer>120930</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
