--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:24:58Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1b6I8oYgYbX2
-								0xOGGxvl3g==
+								5RSIYlYQXc2d
+								uD4gltt3zw==
 								</data>
 								<key>Size</key>
-								<integer>70695</integer>
+								<integer>70533</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TeFy8/zc61i1
-								o46ft1gtDw==
+								KOXcfM966p/p
+								FLYp2UyNfw==
 								</data>
 								<key>Size</key>
-								<integer>142291</integer>
+								<integer>141945</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
