--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBsOvPWXmkh6
-								zRXNKmy71w==
+								8ue45TGC5qGE
+								0tXd1bV/lA==
 								</data>
 								<key>Size</key>
-								<integer>99115</integer>
+								<integer>99520</integer>
 							</dict>
 							<key>files/stacks_page_page41.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QCQd/s7RXj0z
-								6GiKrLatFg==
+								AjOtlrhObFjz
+								gvhq63K8Xg==
 								</data>
 								<key>Size</key>
-								<integer>40269</integer>
+								<integer>40394</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
