--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								goYWZQidh8bv
-								hlKYiOQy/g==
+								lVED/q+f32tu
+								SQg3N+s9OQ==
 								</data>
 								<key>Size</key>
-								<integer>218498</integer>
+								<integer>218577</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								szimsqceIHXZ
-								fbstCn9iFQ==
+								9nEOrEIyiKmT
+								J+Ak3U/TGA==
 								</data>
 								<key>Size</key>
-								<integer>148551</integer>
+								<integer>148576</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
