Switched around some images, resizing

--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:34:36Z</date>
+						<date>2018-07-10T18:59:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5RSIYlYQXc2d
-								uD4gltt3zw==
+								uh3VrHVkwWKt
+								736XljpFjA==
 								</data>
 								<key>Size</key>
-								<integer>70533</integer>
+								<integer>68770</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KOXcfM966p/p
-								FLYp2UyNfw==
+								yh/uYhj7xpY6
+								0fbEPhLGiQ==
 								</data>
 								<key>Size</key>
-								<integer>141945</integer>
+								<integer>139553</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
