--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:34:36Z</date>
+						<date>2018-07-10T18:59:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,11 +388,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5RSIYlYQXc2d
-								uD4gltt3zw==
+								uh3VrHVkwWKt
+								736XljpFjA==
 								</data>
 								<key>Size</key>
-								<integer>70533</integer>
+								<integer>68770</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -658,11 +658,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KOXcfM966p/p
-								FLYp2UyNfw==
+								yh/uYhj7xpY6
+								0fbEPhLGiQ==
 								</data>
 								<key>Size</key>
-								<integer>141945</integer>
+								<integer>139553</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
@@ -7127,7 +7127,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T15:02:31Z</date>
+						<date>2018-07-10T18:59:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7176,11 +7176,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DkJA+22y9L7m
-								qQnHRwrBSg==
+								znLCz1orF1vz
+								X795exR1TQ==
 								</data>
 								<key>Size</key>
-								<integer>4134</integer>
+								<integer>4262</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
