Revert "Scales of Learning, Resizing and Reformatting Images and Text Boxes"

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T19:15:31Z</date>
+						<date>2018-07-10T18:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,11 +388,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								erGYRHk4hCQz
-								0ShN9I9VqQ==
+								5RSIYlYQXc2d
+								uD4gltt3zw==
 								</data>
 								<key>Size</key>
-								<integer>66007</integer>
+								<integer>70533</integer>
 							</dict>
 							<key>index_files/medium_526238.png</key>
 							<dict>
@@ -658,11 +658,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RVZKuWbQTwtd
-								0hYvZfvDEA==
+								KOXcfM966p/p
+								FLYp2UyNfw==
 								</data>
 								<key>Size</key>
-								<integer>138138</integer>
+								<integer>141945</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
@@ -7127,7 +7127,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:59:53Z</date>
+						<date>2018-07-09T15:02:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7176,11 +7176,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								znLCz1orF1vz
-								X795exR1TQ==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>4262</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
