--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7127,7 +7127,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:59:53Z</date>
+						<date>2018-07-11T13:26:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7176,11 +7176,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								znLCz1orF1vz
-								X795exR1TQ==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>4262</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7193,7 +7193,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T17:58:12Z</date>
+						<date>2018-07-11T13:26:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8232,11 +8232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UU94Ku/+iPbb
-								Jjgo1/q23w==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3697</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
